# defect-pipeline

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
scripts/: plot_bench.py  plot_compare.py  plot_phase3.py  plot_phase4.py
src/app/: main.cpp
src/capture/: MvtecFrameSource.hpp
src/core/: Frame.hpp  IDefectDetector.hpp  IFrameSource.hpp  SpscQueue.hpp  Timer.hpp
src/cpu/: CpuDefectDetector.hpp
src/detect/: CudaDefectDetector.cu  CudaDefectDetector.hpp
